concord_macros/tests/dsl/fail/fail_duplicate_behavior_same_site_endpoint.stderr
error: duplicate behavior `read` at this attachment site
  --> tests/dsl/fail/fail_duplicate_behavior_same_site_endpoint.rs:15:14
   |
15 |     behavior read
   |              ^^^^
